--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,12 @@
 {
     "require": {
         "vlucas/phpdotenv": "^5.6",
-        "symfony/security-csrf": "^7.1"
+        "symfony/routing": "^7.1",
+        "symfony/http-foundation": "^7.1"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
     }
 }
