--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "vlucas/phpdotenv": "^5.6",
         "symfony/routing": "^7.1",
-        "symfony/http-foundation": "^7.1"
+        "symfony/http-foundation": "^7.1",
+        "php": ">=7.4"
     },
     "autoload": {
         "psr-4": {
