--- a/views/package.json
+++ b/views/package.json
@@ -6,13 +6,22 @@
     "lib": "lib"
   },
   "scripts": {
-    "dev": "npx tailwindcss -i ./style.css -o ./assets/css/styles.css --watch"
+    "dev": "npx tailwindcss -i ./style.css -o ./assets/css/styles.css --watch",
+    "devs": "vite",
+    "build": "vite build",
+    "watch": "vite build --watch"
   },
   "keywords": [],
   "author": "Natzsixn",
   "license": "ISC",
   "description": "itesa Tracer Study",
   "devDependencies": {
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "vite": "^5.4.10"
+  },
+  "dependencies": {
+    "alpinejs": "^3.14.3",
+    "gsap": "^3.12.5",
+    "split-type": "^0.3.4"
   }
 }
