--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,14 @@
 {
+    "name": "maousama/quizmahaphp",
+    "description": "Aplikasi survei untuk mahasiswa",
+    "type": "project",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "MaousamaNatz",
+            "email": "apcb.maousama@gmail.com"
+        }
+    ],
     "require": {
         "vlucas/phpdotenv": "^5.6",
         "symfony/routing": "^7.1",
