--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "maousama/quizmahaphp",
     "description": "Aplikasi survei untuk mahasiswa",
     "type": "project",
+    "version": "0.0.3",
     "license": "MIT",
     "authors": [
         {
@@ -13,7 +14,9 @@
         "vlucas/phpdotenv": "^5.6",
         "symfony/routing": "^7.1",
         "symfony/http-foundation": "^7.1",
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "phpoffice/phpspreadsheet": "^3.4",
+        "symfony/security-csrf": "^7.1"
     },
     "autoload": {
         "psr-4": {
